--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Title</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css"/>
-    </head>
 
-    <body>
-        <div id="bloc_page">
-            <header>
-                <h1> ohmyfood</h1>
-            </header>
-            <div id="menu">
-                <section id="note">
-                    <p>
-                        La note enchantée <br />
-                        <strong>Menu</strong>
-                    </p>
-                </section>
-                <section id="chic">
-                    <p>
-                        Le chic à la française <br />
-                        <strong>Menu</strong>
-                    </p>
-                </section>
-                <section id="délice">
-                    <p>
-                        Le délice des papilles <br />
-                        <strong>Menu</strong>
-                    </p>
-                </section>
-                <section id="palette">
-                    <p>
-                        La palette du goût <br />
-                        <strong>Menu</strong>
-                    </p>
-                </section>
-            </div>
-                <aside>
-                    <p>Prochainement</p>
-                </aside>
-            <footer>
-                <div id="mentions">
-                    <p><a href="mentions_legales.html" Mentions légales</a>Mentions legales</p>
-                </div>
-                <div id="contact">
-                    <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"</a> Contactez-nous</p>
-                </div>
-            </footer>
+<head>
+    <title>Title</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <div id="bloc_page">
+        <header>
+            <h1> ohmyfood</h1>
+        </header>
+        <div id="menu">
+            <section id="note">
+                <p>
+                    La note enchantée <br />
+                    <a href="note/note.html"><strong>Menu</strong></a>
+                </p>
+            </section>
+            <section id="chic">
+                <p>
+                    Le chic à la française <br />
+                    <a href="chic/chic.html"><strong>Menu</strong></a>
+                </p>
+            </section>
+            <section id="délice">
+                <p>
+                    Le délice des papilles <br />
+                    <a href="délice/delice.html"><strong>Menu</strong></a>
+                </p>
+            </section>
+            <section id="palette">
+                <p>
+                    La palette du goût <br />
+                    <a href="palette/palette.html"><strong>Menu</strong></a>
+                </p>
+            </section>
         </div>
-    </body>
+        <aside>
+            <p>Prochainement</p>
+        </aside>
+        <footer>
+            <div id="mentions">
+                <p><a href="mentions_legales.html" Mentions légales> Mentions legales</a></p>
+            </div>
+            <div id="contact">
+                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"> Contactez-nous</a></p>
+            </div>
+        </footer>
+    </div>
+</body>
+
 </html>
