mise en page menu note

--- a/note/note.html
+++ b/note/note.html
@@ -5,6 +5,7 @@
     <title>La note enchantée</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style_note.css" />
+    <link rel="stylesheet" href="../font_awesome/css/all.min.css">
 </head>
 
 <body>
@@ -12,9 +13,12 @@
         <h1> ohmyfood</h1>
     </header>
     <section>
-        <header class="la_note">La note enchanté</header>
+        <div id="logo">
+            <p><i class="fas fa-music"></i></p>
+            <p>La note enchantée</p>
+        </div>
 
-    <h3 class="hr">Prélude</h3>
+        <h3 class="hr">Prélude</h3>
 
         <div id="prelude">
             <p>
@@ -55,14 +59,14 @@
                 Tarte au citron meringuée destructurée
             </p>
         </div>
-        <footer class="la_note">La note enchantée</footer>
+        <h2><i class="fas fa-music"></i>&nbsp; La note enchantée</h2>
     </section>
     <footer>
         <div id="mentions">
-            <p><a href="mentions_legales.html" Mentions légales>Mentions legales</a></p>
+            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
         </div>
         <div id="contact">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous">Contactez-nous</a></p>
+            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
         </div>
     </footer>
 </body>
