Fin de la mise en page

--- a/note/note.html
+++ b/note/note.html
@@ -13,53 +13,56 @@
         <h1> ohmyfood</h1>
     </header>
     <section>
-        <div id="logo">
-            <p><i class="fas fa-music"></i></p>
+        <header id="logo">
+            <i class="fas fa-music"></i>
             <p>La note enchantée</p>
+        </header>
+        
+        <div id="menu">
+            <h3 class="hr">Prélude</h3>
+            <div id="prelude">
+                <p>
+                    Ravioles de foie gras accompagnés de leur crème à la truffe<br />
+                    Caviar osciètre sur blini à la farine de blé noir<br />
+                    Homard et espuma de potiron mariné au zests d'orange<br />
+                    Foie gras de canard cuit entier, confiture de figue et pain toasté
+                </p>
+                <p class="tarifs">
+                    98€<br />
+                    115€<br />
+                    89€<br />
+                    105€
+                </p>
+            </div>
+
+            <h3 class="hr">Point d'orgue</h3>
+
+            <div id="point_dorgue">
+                <p>
+                    Noix de coquille Saint Jacques sur lit de purée de céleri-rave<br />
+                    Langoustine poêlée, purée de patate douce<br />
+                    Mijoté de queue de boeuf et riz sauvage aux zests de citron
+                </p>
+                <p class="tarifs">
+                    102€<br />
+                    205€<br />
+                    169€
+                </p>
+            </div>
+
+            <h3 class="hr">Mouvement final</h3>
+
+            <div id="mouvement_final">
+                <p>
+                    Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br />
+                    Baba au rhum revisité avec son coulis de citron<br />
+                    Tarte au citron meringuée destructurée
+                </p>
+            </div>
         </div>
 
-        <h3 class="hr">Prélude</h3>
+        <h2><i class="fas fa-music"></i>&nbsp;La note enchantée</h2>
 
-        <div id="prelude">
-            <p>
-                Ravioles de foie gras accompagnés de leur crème à la truffe<br />
-                Caviar osciètre sur blini à la farine de blé noir<br />
-                Homard et espuma de potiron mariné au zests d'orange<br />
-                Foie gras de canard cuit entier, confiture de figue et pain toasté
-            </p>
-            <p class="tarifs">
-                98€<br />
-                115€<br />
-                89€<br />
-                105€
-            </p>
-        </div>
-
-        <h3 class="hr">Point d'orgue</h3>
-
-        <div id="point_dorgue">
-            <p>
-                Noix de coquille Saint Jacques sur lit de purée de céleri-rave<br />
-                Langoustine poêlée, purée de patate douce<br />
-                Mijoté de queue de boeuf et riz sauvage aux zests de citron
-            </p>
-            <p class="tarifs">
-                102€<br />
-                205€<br />
-                169€
-            </p>
-        </div>
-
-        <h3 class="hr">Mouvement final</h3>
-
-        <div id="mouvement_final">
-            <p>
-                Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br />
-                Baba au rhum revisité avec son coulis de citron<br />
-                Tarte au citron meringuée destructurée
-            </p>
-        </div>
-        <h2><i class="fas fa-music"></i>&nbsp; La note enchantée</h2>
     </section>
     <footer>
         <div id="mentions">
