Mise en page du menu Délice

--- a/délice/delice.html
+++ b/délice/delice.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Le délice des papilles</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="style_delice.css"/>
-    </head>
 
-    <body>
-        <header>
-            <h1> ohmyfood</h1>
-        </header>           
-            <section>
-                <header id="delice">Le délice des papilles</header>
-                    <h3 class="hr">Pour bien commencer</h3>
-                    <div id="entrée">
-                        <p>
-                            Tartare de thon assaisonné au yuzu<br />
-                            Bouchée de homard croustillant et sa farandole de petits légumes<br />
-                            Velouté de cèpes aux truffes
-                        </p>
-                        <p class="tarifs">
-                            55€<br />
-                            89€<br />
-                            56€
-                        </p>
-                    </div>
-                    <h3 class="hr">Pour bien continuer</h3>
-                    <div id="plats">
-                        <p>
-                            Poulet rôti aux herbes de provence et sa crême de truffe<br />
-                            Langouste rôtie et ses légumes de saison<br />
-                            Côte de boeuf angus et sa purée de panais
-                        </p>
-                        <p class="tarifs">
-                            110€<br />
-                            225€<br />
-                            115€
-                        </p>
-                    </div>
-                        <h3 class="hr">Pour bien terminer</h3>
-                        <div id="dessert">
-                            <p>
-                                Farandole de desserts du chef<br />
-                                Crème brulée revisitée<br />
-                                Tiramisu à la noisette
-                            </p>
-                            <p class="tarifs">
-                                55€<br />
-                                60€<br />
-                                55€
-                            </p>
-                        </div>
-            </section>
-            <footer>
-                <div id="mentions">
-                    <p><a href="mentions_legales.html" Mentions légales>Mentions legales</a></p>
-                </div>
-                <div id="contact">
-                    <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"> Contactez-nous</a></p>
-                </div>
-            </footer>
-    </body>
+<head>
+    <title>Le délice des papilles</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style_delice.css" />
+</head>
+
+<body>
+    <header>
+        <h1> ohmyfood</h1>
+    </header>
+    <section>
+        <header id="delice">Le délice des papilles</header>
+        <div id="menu">
+            <h3 class="hr">Pour bien commencer</h3>
+            <div id="entrée">
+                <p>
+                    Tartare de thon assaisonné au yuzu<br />
+                    Bouchée de homard croustillant et sa farandole de petits légumes<br />
+                    Velouté de cèpes aux truffes
+                </p>
+                <p class="tarifs">
+                    55€<br />
+                    89€<br />
+                    56€
+                </p>
+            </div>
+            <h3 class="hr">Pour bien continuer</h3>
+            <div id="plats">
+                <p>
+                    Poulet rôti aux herbes de provence et sa crême de truffe<br />
+                    Langouste rôtie et ses légumes de saison<br />
+                    Côte de boeuf angus et sa purée de panais
+                </p>
+                <p class="tarifs">
+                    110€<br />
+                    225€<br />
+                    115€
+                </p>
+            </div>
+            <h3 class="hr">Pour bien terminer</h3>
+            <div id="dessert">
+                <p>
+                    Farandole de desserts du chef<br />
+                    Crème brulée revisitée<br />
+                    Tiramisu à la noisette
+                </p>
+                <p class="tarifs">
+                    55€<br />
+                    60€<br />
+                    55€
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div id="mentions">
+            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
+        </div>
+        <div id="contact">
+            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+        </div>
+    </footer>
+</body>
+
 </html>
