--- a/palette/palette.html
+++ b/palette/palette.html
@@ -13,52 +13,54 @@
     </header>
     <section>
         <header id="palette">La palette du goût</header>
-        <h3 class="hr">Esquisse</h3>
-        <div id="entrée">
-            <ul>
-                <li> Fricassée d'escargot au piment d'espelette</li>
-                <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
-                <li>Foie gras de canard mi-cuit et ses copeaux de truffe noires</li>
-            </ul>
-            <ul class="tarifs">
-                <li>60€</li>
-                <li>55€</li>
-                <li>65€</li>
-            </ul>
-        </div>
-        <h3 class="hr">Oeuvre de maître</h3>
-        <div id="plats">
-            <p>
-                Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br />
-                Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br />
-                Filet de Turbot aux agrumes
-            </p>
-            <p class="tarifs">
-                70€<br />
-                85€<br />
-                125€
-            </p>
-        </div>
-        <h3 class="hr">Au sommet de l'art</h3>
-        <div id="dessert">
-            <p>
-                Paris-Brest revisité<br />
-                Macaron au chocolat d'expetion et glace à la vanille de Madagascar<br />
-                Mousse au chocolat au piment d'espelette et à la truffe noire
-            </p>
-            <p class="tarifs">
-                55€<br />
-                65€<br />
-                60€
-            </p>
+        <div id="menu">
+            <h3 class="hr">Esquisse</h3>
+            <div id="entrée">
+                <ul>
+                    <li> Fricassée d'escargot au piment d'espelette</li>
+                    <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
+                    <li>Foie gras de canard mi-cuit et ses copeaux de truffe noires</li>
+                </ul>
+                <ul class="tarifs">
+                    <li>60€</li>
+                    <li>55€</li>
+                    <li>65€</li>
+                </ul>
+            </div>
+            <h3 class="hr">Oeuvre de maître</h3>
+            <div id="plats">
+                <p>
+                    Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br />
+                    Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br />
+                    Filet de Turbot aux agrumes
+                </p>
+                <p class="tarifs">
+                    70€<br />
+                    85€<br />
+                    125€
+                </p>
+            </div>
+            <h3 class="hr">Au sommet de l'art</h3>
+            <div id="dessert">
+                <p>
+                    Paris-Brest revisité<br />
+                    Macaron au chocolat d'expetion et glace à la vanille de Madagascar<br />
+                    Mousse au chocolat au piment d'espelette et à la truffe noire
+                </p>
+                <p class="tarifs">
+                    55€<br />
+                    65€<br />
+                    60€
+                </p>
+            </div>
         </div>
     </section>
-    <footer id="fin">
+    <footer>
         <div id="mentions">
-            <p><a href="mentions_legales.html" Mentions légales>Mentions legales</a></p>
+            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
         </div>
         <div id="contact">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"> Contactez-nous</a></p>
+            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
         </div>
     </footer>
 </body>
