Mofidification de la police

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -16,7 +16,7 @@
             <p>Le chic à la française</p>
         </header>
         <div id="menu">
-            <h3 class="hr">Pour se mettre en appétit</h3>
+            <h3 id="hr_appetit">Pour se mettre en appétit</h3>
             <div id="entrée">
                 <p>
                     Tartare de poulpe acidulé aux zests d'orange<br />
@@ -29,7 +29,7 @@
                     57€
                 </p>
             </div>
-            <h3 class="hr">Plaisir des papilles</h3>
+            <h3 id="hr_plaisir">Plaisir des papilles</h3>
             <div id="plats">
                 <p>
                     Coquille Saint Jacques accompagnées d'une purée de panais<br />
@@ -42,7 +42,7 @@
                     175€
                 </p>
             </div>
-            <h3 class="hr">Gourmandise sucrées</h3>
+            <h3 id="hr_gourmandise">Gourmandise sucrées</h3>
             <div id="dessert">
                 <p>
                     Pétales de violettes glacés et purée de noisettes<br />
