modification de la police menu plette

--- a/palette/palette.html
+++ b/palette/palette.html
@@ -12,7 +12,9 @@
         <h1> ohmyfood</h1>
     </header>
     <section>
-        <header id="palette">La palette du goût</header>
+        <header id="palette">
+            <p>La palette du goût</p>
+        </header>
         <div id="menu">
             <h3 class="hr">Esquisse</h3>
             <div id="entrée">
