--- a/délice/delice.html
+++ b/délice/delice.html
@@ -12,9 +12,11 @@
         <h1> ohmyfood</h1>
     </header>
     <section>
-        <header id="delice">Le délice des papilles</header>
+        <header id="delice">
+            <p>Le délice des papilles</p>
+        </header>
         <div id="menu">
-            <h3 class="hr">Pour bien commencer</h3>
+            <h3 id="hr_commencer">Pour bien commencer</h3>
             <div id="entrée">
                 <p>
                     Tartare de thon assaisonné au yuzu<br />
@@ -27,7 +29,7 @@
                     56€
                 </p>
             </div>
-            <h3 class="hr">Pour bien continuer</h3>
+            <h3 id="hr_continuer">Pour bien continuer</h3>
             <div id="plats">
                 <p>
                     Poulet rôti aux herbes de provence et sa crême de truffe<br />
@@ -40,7 +42,7 @@
                     115€
                 </p>
             </div>
-            <h3 class="hr">Pour bien terminer</h3>
+            <h3 id="hr_terminer">Pour bien terminer</h3>
             <div id="dessert">
                 <p>
                     Farandole de desserts du chef<br />
