Ajout wiggle dans tous les footer

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -53,11 +53,11 @@
         </div>
     </section>
     <footer>
-        <div id="mentions">
-            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
+        <div class="wiggle">
+            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
         </div>
-        <div id="contact">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+        <div class="wiggle">
+            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
         </div>
     </footer>
 </body>
