--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Mention Légales</title>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css"/>
-    </head>
 
-    <body>
-            <header>
-                <h1> Mention legales</h1>
-            </header>
-            
-    </body>
+<head>
+    <title>Mention Légales</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <header>
+        <h1> Mentions légales</h1>
+    </header>
+
+</body>
+
 </html>
