--- a/note/note.html
+++ b/note/note.html
@@ -10,14 +10,14 @@
 
 <body>
     <header>
-        <h1> ohmyfood</h1>
+        <h1>ohmyfood</h1>
     </header>
     <section>
         <header id="logo">
             <i class="fas fa-music"></i>
             <p>La note enchantée</p>
         </header>
-        
+
         <div id="menu">
             <h3 class="hr">Prélude</h3>
             <div id="prelude">
@@ -65,10 +65,10 @@
 
     </section>
     <footer>
-        <div id="mentions">
-            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
+        <div class="wiggle">
+            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
         </div>
-        <div id="contact">
+        <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
         </div>
     </footer>
