--- a/délice/delice.html
+++ b/délice/delice.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1> ohmyfood</h1>
+        <h1>ohmyfood</h1>
     </header>
     <section>
         <header id="delice">
@@ -58,10 +58,10 @@
         </div>
     </section>
     <footer>
-        <div id="mentions">
-            <p><a href="mentions_legales.html" Mentions légales><span>Mentions legales</span></a></p>
+        <div class="wiggle">
+            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
         </div>
-        <div id="contact">
+        <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
         </div>
     </footer>
