--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <p>Prochainement</p>
         </aside>
         <footer>
-            <div id="mentions">
-                <p><a href="mentions_legales.html" Mentions légales> <span>Mentions legales</span></a></p>
+            <div class="wiggle">
+                <p><a href="mentions_legales.html" Mentions légales> <span>Mentions légales</span></a></p>
             </div>
-            <div id="contact">
-                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+            <div class="wiggle">
+                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
             </div>
         </footer>
     </div>
