--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             </section>
         </div>
         <aside>
-            <p>Prochainement</p>
+            <p id="avant">Prochainement</p>
+            <p id="apres"><span id="point1">.</span><span id="point2">.</span><span id="point3">.</span></p>
         </aside>
         <footer>
             <div class="wiggle">
