finition mise en page menu Chic

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -13,7 +13,7 @@
     </header>
     <section>
         <header id="chic">
-            <p>Le chic à la française</p>
+            <h2>Le chic à la française</h2>
         </header>
         <div id="menu">
             <h3 id="hr_appetit">Pour se mettre en appétit</h3>
@@ -54,7 +54,7 @@
     </section>
     <footer>
         <div class="wiggle">
-            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
+            <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
         </div>
         <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
