finition de la mise en pagemenu Note

--- a/note/note.html
+++ b/note/note.html
@@ -15,7 +15,7 @@
     <section>
         <header id="logo">
             <i class="fas fa-music"></i>
-            <p>La note enchantée</p>
+            <h2>La note enchantée</h2>
         </header>
 
         <div id="menu">
@@ -66,7 +66,7 @@
     </section>
     <footer>
         <div class="wiggle">
-            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
+            <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
         </div>
         <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
