finition de la mise en page menu Délice

--- a/délice/delice.html
+++ b/délice/delice.html
@@ -13,7 +13,7 @@
     </header>
     <section>
         <header id="delice">
-            <p>Le délice des papilles</p>
+            <h2>Le délice des papilles</h2>
         </header>
         <div id="menu">
             <h3 id="hr_commencer">Pour bien commencer</h3>
@@ -59,7 +59,7 @@
     </section>
     <footer>
         <div class="wiggle">
-            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
+            <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
         </div>
         <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
