finition de la mise en page menu Palette

--- a/palette/palette.html
+++ b/palette/palette.html
@@ -13,21 +13,21 @@
     </header>
     <section>
         <header id="palette">
-            <p>La palette du goût</p>
+            <h2>La palette du goût</h2>
         </header>
         <div id="menu">
             <h3 class="hr">Esquisse</h3>
             <div id="entrée">
-                <ul>
-                    <li> Fricassée d'escargot au piment d'espelette</li>
-                    <li>Oeuf au plat assaisonné à la truffe sur lit de caviar</li>
-                    <li>Foie gras de canard mi-cuit et ses copeaux de truffe noires</li>
-                </ul>
-                <ul class="tarifs">
-                    <li>60€</li>
-                    <li>55€</li>
-                    <li>65€</li>
-                </ul>
+                <p>
+                    Fricassée d'escargot au piment d'espelette<br />
+                    Oeuf au plat assaisonné à la truffe sur lit de caviar<br />
+                    Foie gras de canard mi-cuit et ses copeaux de truffe noires
+                </p>
+                <p class="tarifs">
+                    60€<br />
+                    55€<br />
+                    65€
+                </p>
             </div>
             <h3 class="hr">Oeuvre de maître</h3>
             <div id="plats">
@@ -59,7 +59,7 @@
     </section>
     <footer>
         <div class="wiggle">
-            <p><a href="../mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
+            <p><a href="../mentions_legales.html" ><span>Mentions légales</span></a></p>
         </div>
         <div class="wiggle">
             <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
