--- a/index.html
+++ b/index.html
@@ -13,41 +13,40 @@
         <header>
             <h1> ohmyfood</h1>
         </header>
-        <div id="menu">
-            <section id="note">
-                
+        <section id="menu">
+            <article id="note">
+                <a href="note/note.html">
                     <i class="fas fa-music"></i>
                     <h2>La note enchantée </h2>
-                    <p><a href="note/note.html"><strong>Menu</strong></a></p>
-            </section>
-            <section id="chic">
-                <div class="zoom">
-                    <a href="chic/chic.html">
-                        <h2>Le chic à la française</h2>
-                        <p><strong>Menu</strong></p>
-                    </a>
-                </div>
-            </section>
-            <section id="délice">
+                    <p><strong>MENU</strong></p>
+                </a>
+            </article>
+            <article id="chic">
+                <a href="chic/chic.html">
+                    <h2>Le chic à la française</h2>
+                    <p><strong>Menu</strong></p>
+                </a>
+            </article>
+            <article id="délice">
                 <a href="délice/delice.html">
                     <h2>Le délice des papilles</h2>
                     <p><strong>Menu</strong></p>
                 </a>
-            </section>
-            <section id="palette">
+            </article>
+            <article id="palette">
                 <a href="palette/palette.html">
                     <h2>La palette du goût</h2>
                     <p><strong>Menu</strong></p>
                 </a>
-            </section>
-        </div>
+            </article>
+        </section>
         <aside>
             <p id="avant">Prochainement</p>
             <p id="apres"><span id="point1">.</span><span id="point2">.</span><span id="point3">.</span></p>
         </aside>
         <footer>
             <div class="wiggle">
-                <p><a href="mentions_legales.html" Mentions légales><span>Mentions légales</span></a></p>
+                <p><a href="mentions_legales.html"><span>Mentions légales</span></a></p>
             </div>
             <div class="wiggle">
                 <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
