Début du responsive

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <p><strong>Menu</strong></p>
                 </a>
             </article>
-            <article id="délice">
-                <a href="délice/delice.html">
+            <article id="delice">
+                <a href="delice/delice.html">
                     <h2>Le délice des papilles</h2>
                     <p><strong>Menu</strong></p>
                 </a>
