modification mise en page des  menus

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -11,55 +11,58 @@
     <header>
         <h1> ohmyfood</h1>
     </header>
-    <section>
+    <div id="bloc_page">
         <header id="chic">
             <h2>Le chic à la française</h2>
         </header>
         <div id="menu">
             <h3 id="hr_appetit">Pour se mettre en appétit</h3>
-            <div id="entrée">
-                <p>
-                    Tartare de poulpe acidulé aux zests d'orange<br />
-                    Velouté de légumes d'antan<br />
-                    Soupe à l'oignon revisité
-                </p>
-                <p class="tarifs">
-                    79€<br />
-                    57€<br />
-                    57€
-                </p>
-            </div>
+            <section id="entrée">
+                <div class="prix">
+                    <p>Tartare de poulpe acidulé aux zests d'orange</p>
+                    <p>79€</p>
+                </div>
+                <div class="prix">
+                    <p>Velouté de légumes d'antan</p>
+                    <p>57€</p>
+                </div>
+                <div class="prix">
+                    <p>Soupe à l'oignon revisité</p>
+                    <p>57€</p>
+                </div>
+            </section>
             <h3 id="hr_plaisir">Plaisir des papilles</h3>
-            <div id="plats">
-                <p>
-                    Coquille Saint Jacques accompagnées d'une purée de panais<br />
-                    Magret de canard et parmentier de pommes de terres<br />
-                    Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes
-                </p>
-                <p class="tarifs">
-                    95€<br />
-                    88€<br />
-                    175€
-                </p>
-            </div>
+            <section id="plats">
+                <div class="prix">
+                    <p> Saint Jacques accompagnées d'une purée de panais</p>
+                    <p>95€</p>
+                </div>
+                <div class="prix">
+                    <p> Magret de canard et parmentier de pommes de terres</p>
+                    <p>88€</p>
+                </div>
+                <div class="prix">
+                    <p> Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
+                    <P>175€</p>
+                </div>
+            </section>
             <h3 id="hr_gourmandise">Gourmandise sucrées</h3>
-            <div id="dessert">
-                <p>
-                    Pétales de violettes glacés et purée de noisettes<br />
-                    Fondant au chocolat revisité<br />
-                    Mille feuille croustillant
-                </p>
+            <section>
+                <div id="dessert">
+                    <p> Pétales de violettes glacés et purée de noisettes</p>
+                    <p>Fondant au chocolat revisité</p>
+                    <p>Mille feuille croustillant</p>
+                </div>
+            </section>
+        </div>
+        <footer>
+            <div class="wiggle">
+                <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div class="wiggle">
-            <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
-        </div>
-        <div class="wiggle">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
-        </div>
-    </footer>
+            <div class="wiggle">
+                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
+            </div>
+        </footer>
 </body>
 
 </html>
