--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1> ohmyfood</h1>
         </header>
-        <section id="menu">
+        <section>
             <article id="note">
                 <a href="note/note.html">
                     <i class="fas fa-music"></i>
