modification de la mise en page des 4 menus et menu principal

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -47,12 +47,11 @@
                 </div>
             </section>
             <h3 id="hr_gourmandise">Gourmandise sucrées</h3>
-            <section>
-                <div id="dessert">
-                    <p> Pétales de violettes glacés et purée de noisettes</p>
-                    <p>Fondant au chocolat revisité</p>
-                    <p>Mille feuille croustillant</p>
-                </div>
+
+            <section id="dessert">
+                <p> Pétales de violettes glacés et purée de noisettes</p>
+                <p>Fondant au chocolat revisité</p>
+                <p>Mille feuille croustillant</p>
             </section>
         </div>
         <footer>
