--- a/delice/delice.html
+++ b/delice/delice.html
@@ -11,60 +11,66 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-    <section>
+    <div id="bloc_page">
         <header id="delice">
             <h2>Le délice des papilles</h2>
         </header>
         <div id="menu">
             <h3 id="hr_commencer">Pour bien commencer</h3>
-            <div id="entrée">
-                <p>
-                    Tartare de thon assaisonné au yuzu<br />
-                    Bouchée de homard croustillant et sa farandole de petits légumes<br />
-                    Velouté de cèpes aux truffes
-                </p>
-                <p class="tarifs">
-                    55€<br />
-                    89€<br />
-                    56€
-                </p>
-            </div>
+            <section id="entrée">
+                <div class="prix">
+                    <p>Tartare de thon assaisonné au yuzu</p>
+                    <p>55€</p>
+                </div>
+                <div class="prix">
+                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                    <p>89€</p>
+                </div>
+                <div class="prix">
+                    <p>Velouté de cèpes aux truffes</p>
+                    <p>56€</p>
+                </div>
+            </section>
+
             <h3 id="hr_continuer">Pour bien continuer</h3>
-            <div id="plats">
-                <p>
-                    Poulet rôti aux herbes de provence et sa crême de truffe<br />
-                    Langouste rôtie et ses légumes de saison<br />
-                    Côte de boeuf angus et sa purée de panais
-                </p>
-                <p class="tarifs">
-                    110€<br />
-                    225€<br />
-                    115€
-                </p>
-            </div>
+            <section id="plats">
+                <div class="prix">
+                    <p>Poulet rôti aux herbes de provence et sa crême de truffe</p>
+                    <p>110€</p>
+                </div>
+                <div class="prix">
+                    <p>Langouste rôtie et ses légumes de saison</p>
+                    <p>225€</p>
+                </div>
+                <div class="prix">
+                    <p>Côte de boeuf angus et sa purée de panais</p>
+                    <p>115€</p>
+                </div>
+            </section>
             <h3 id="hr_terminer">Pour bien terminer</h3>
             <div id="dessert">
-                <p>
-                    Farandole de desserts du chef<br />
-                    Crème brulée revisitée<br />
-                    Tiramisu à la noisette
-                </p>
-                <p class="tarifs">
-                    55€<br />
-                    60€<br />
-                    55€
-                </p>
+                <div class="prix">
+                    <p>Farandole de desserts du chef</p>
+                    <p>55€</p>
+                </div>
+                <div class="prix">
+                    <p>Crème brulée revisitée</p>
+                    <p>60€</p>
+                </div>
+                <div class="prix">
+                    <p>Tiramisu à la noisette</p>
+                    <p>55€</p>
+                </div>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div class="wiggle">
-            <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
-        </div>
-        <div class="wiggle">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
-        </div>
-    </footer>
+            <footer>
+                <div class="wiggle">
+                    <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
+                </div>
+                <div class="wiggle">
+                    <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a>
+                    </p>
+                </div>
+            </footer>
 </body>
 
 </html>
