--- a/note/note.html
+++ b/note/note.html
@@ -12,53 +12,54 @@
     <header>
         <h1>ohmyfood</h1>
     </header>
-    <section>
+    <div id="bloc_page">
         <header id="logo">
             <i class="fas fa-music"></i>
             <h2>La note enchantée</h2>
         </header>
-
         <div id="menu">
             <h3 class="hr">Prélude</h3>
-            <div id="prelude">
-                <p>
-                    Ravioles de foie gras accompagnés de leur crème à la truffe<br />
-                    Caviar osciètre sur blini à la farine de blé noir<br />
-                    Homard et espuma de potiron mariné au zests d'orange<br />
-                    Foie gras de canard cuit entier, confiture de figue et pain toasté
-                </p>
-                <p class="tarifs">
-                    98€<br />
-                    115€<br />
-                    89€<br />
-                    105€
-                </p>
+            <section id="prelude">
+                <div class="prix">
+                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+                <p>98€</p>
             </div>
+                <div class="prix">
+                <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                <p>115€</p>
+            </div>
+                <div class="prix">
+                <p>Homard et espuma de potiron mariné au zests d'orange</p>
+                <p>89€</p>
+            </div>
+                <div class="prix">
+                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                <p>105€</p>
+            </div>
+            </section>
 
             <h3 class="hr">Point d'orgue</h3>
 
-            <div id="point_dorgue">
-                <p>
-                    Noix de coquille Saint Jacques sur lit de purée de céleri-rave<br />
-                    Langoustine poêlée, purée de patate douce<br />
-                    Mijoté de queue de boeuf et riz sauvage aux zests de citron
-                </p>
-                <p class="tarifs">
-                    102€<br />
-                    205€<br />
-                    169€
-                </p>
-            </div>
-
+            <section id="point_dorgue">
+                <div class="prix">
+                    <p>Noix de coquille Saint Jacques sur lit de purée de céleri-rave</p>
+                    <p>102€</p>
+                </div>
+                    <div class="prix">
+                    <p>Langoustine poêlée, purée de patate douce</p>
+                    <p>205€</p>
+                </div>
+                    <div class="prix">
+                    <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+                    <p>169€</p>
+                </div>   
+            </section>
             <h3 class="hr">Mouvement final</h3>
-
-            <div id="mouvement_final">
-                <p>
-                    Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br />
-                    Baba au rhum revisité avec son coulis de citron<br />
-                    Tarte au citron meringuée destructurée
-                </p>
-            </div>
+            <section id="mouvement_final">
+                    <p>Macaron noisette et chocolat, glace au caramel brun et sel de guérande</p>
+                    <p>Baba au rhum revisité avec son coulis de citron</p>
+                    <p>Tarte au citron meringuée destructurée</p>
+            </section>
         </div>
 
         <h2><i class="fas fa-music"></i>&nbsp;La note enchantée</h2>
