--- a/palette/palette.html
+++ b/palette/palette.html
@@ -11,60 +11,66 @@
     <header>
         <h1> ohmyfood</h1>
     </header>
-    <section>
+    <div id="bloc_page">
         <header id="palette">
             <h2>La palette du goût</h2>
         </header>
         <div id="menu">
             <h3 class="hr">Esquisse</h3>
-            <div id="entrée">
-                <p>
-                    Fricassée d'escargot au piment d'espelette<br />
-                    Oeuf au plat assaisonné à la truffe sur lit de caviar<br />
-                    Foie gras de canard mi-cuit et ses copeaux de truffe noires
-                </p>
-                <p class="tarifs">
-                    60€<br />
-                    55€<br />
-                    65€
-                </p>
-            </div>
+            <section id="entrée">
+                <div class="prix">
+                    <p>Fricassée d'escargot au piment d'espelette</p>
+                    <p>60€</p>
+                </div>
+                <div class="prix">
+                    <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
+                    <p>55€</p>
+                </div>
+                <div class="prix">
+                    <p>Foie gras de canard mi-cuit et ses copeaux de truffe noires</p>
+                    <p>65€</p>
+                </div>
+            </section>
             <h3 class="hr">Oeuvre de maître</h3>
-            <div id="plats">
-                <p>
-                    Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br />
-                    Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br />
-                    Filet de Turbot aux agrumes
-                </p>
-                <p class="tarifs">
-                    70€<br />
-                    85€<br />
-                    125€
-                </p>
-            </div>
+            <section id="plats">
+                <div class="prix">
+                    <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
+                    <p>70€</p>
+                </div>
+                <div class="prix">
+                    <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
+                    <p>85€</p>
+                </div>
+                <div class="prix">
+                    <p>Filet de Turbot aux agrumes</p>
+                    <p>125€</p>
+                </div>
+            </section>
             <h3 class="hr">Au sommet de l'art</h3>
-            <div id="dessert">
-                <p>
-                    Paris-Brest revisité<br />
-                    Macaron au chocolat d'expetion et glace à la vanille de Madagascar<br />
-                    Mousse au chocolat au piment d'espelette et à la truffe noire
-                </p>
-                <p class="tarifs">
-                    55€<br />
-                    65€<br />
-                    60€
-                </p>
+            <section id="dessert">
+                <div class="prix">
+                    <p>Paris-Brest revisité</p>
+                    <p>55€</p>
+                </div>
+                <div class="prix">
+                    <p>Macaron au chocolat d'expetion et glace à la vanille de Madagascar</p>
+                    <p> 65€</p>
+                </div>
+                <div class="prix">
+                    <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
+                    <p>60€</p>
+                </div>
+            </section>
+        </div>
+        </section>
+        <footer>
+            <div class="wiggle">
+                <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div class="wiggle">
-            <p><a href="../mentions_legales.html" ><span>Mentions légales</span></a></p>
-        </div>
-        <div class="wiggle">
-            <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
-        </div>
-    </footer>
+            <div class="wiggle">
+                <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
+            </div>
+        </footer>
 </body>
 
 </html>
