Mise en place du bouton retour

--- a/delice/delice.html
+++ b/delice/delice.html
@@ -5,10 +5,12 @@
     <title>Le délice des papilles</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style_delice.css" />
+    <link rel="stylesheet" href="../font_awesome/css/all.min.css">
 </head>
 
 <body>
     <header>
+        <a href="../index.html"><i class="far fa-arrow-alt-circle-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <div id="bloc_page">
