--- a/note/note.html
+++ b/note/note.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <a href="../index.html"><i class="far fa-arrow-alt-circle-left"></i></a>
         <h1>ohmyfood</h1>
     </header>
     <div id="bloc_page">
