--- a/chic/chic.html
+++ b/chic/chic.html
@@ -64,6 +64,7 @@
                 <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span>Contactez-nous</span></a></p>
             </div>
         </footer>
+    </div>
 </body>
 
 </html>
