--- a/palette/palette.html
+++ b/palette/palette.html
@@ -64,7 +64,6 @@
                 </div>
             </section>
         </div>
-        </section>
         <footer>
             <div class="wiggle">
                 <p><a href="../mentions_legales.html"><span>Mentions légales</span></a></p>
@@ -73,6 +72,7 @@
                 <p><a href="mailto:reservation@ohmyfood.com" title="Contactez-nous"><span> Contactez-nous</span></a></p>
             </div>
         </footer>
+    </div>
 </body>
 
 </html>
