augmentation de la taille de la police des paragraphes

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -22,30 +22,30 @@
             <section id="entrée">
                 <div class="prix">
                     <p>Tartare de poulpe acidulé aux zests d'orange</p>
-                    <p>79€</p>
+                    <p class="tarif">79€</p>
                 </div>
                 <div class="prix">
                     <p>Velouté de légumes d'antan</p>
-                    <p>57€</p>
+                    <p class="tarif">57€</p>
                 </div>
                 <div class="prix">
                     <p>Soupe à l'oignon revisité</p>
-                    <p>57€</p>
+                    <p class="tarif">57€</p>
                 </div>
             </section>
             <h3 id="hr_plaisir">Plaisir des papilles</h3>
             <section id="plats">
                 <div class="prix">
                     <p> Saint Jacques accompagnées d'une purée de panais</p>
-                    <p>95€</p>
+                    <p class="tarif">95€</p>
                 </div>
                 <div class="prix">
                     <p> Magret de canard et parmentier de pommes de terres</p>
-                    <p>88€</p>
+                    <p class="tarif">88€</p>
                 </div>
                 <div class="prix">
                     <p> Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</p>
-                    <P>175€</p>
+                    <p class="tarif">175€</p>
                 </div>
             </section>
             <h3 id="hr_gourmandise">Gourmandise sucrées</h3>
