--- a/delice/delice.html
+++ b/delice/delice.html
@@ -22,15 +22,15 @@
             <section id="entrée">
                 <div class="prix">
                     <p>Tartare de thon assaisonné au yuzu</p>
-                    <p>55€</p>
+                    <p class="tarif">55€</p>
                 </div>
                 <div class="prix">
                     <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                    <p>89€</p>
+                    <p class="tarif">89€</p>
                 </div>
                 <div class="prix">
                     <p>Velouté de cèpes aux truffes</p>
-                    <p>56€</p>
+                    <p class="tarif">56€</p>
                 </div>
             </section>
 
@@ -38,30 +38,30 @@
             <section id="plats">
                 <div class="prix">
                     <p>Poulet rôti aux herbes de provence et sa crême de truffe</p>
-                    <p>110€</p>
+                    <p class="tarif">110€</p>
                 </div>
                 <div class="prix">
                     <p>Langouste rôtie et ses légumes de saison</p>
-                    <p>225€</p>
+                    <p class="tarif">225€</p>
                 </div>
                 <div class="prix">
                     <p>Côte de boeuf angus et sa purée de panais</p>
-                    <p>115€</p>
+                    <p class="tarif">115€</p>
                 </div>
             </section>
             <h3 id="hr_terminer">Pour bien terminer</h3>
             <div id="dessert">
                 <div class="prix">
                     <p>Farandole de desserts du chef</p>
-                    <p>55€</p>
+                    <p class="tarif">55€</p>
                 </div>
                 <div class="prix">
                     <p>Crème brulée revisitée</p>
-                    <p>60€</p>
+                    <p class="tarif">60€</p>
                 </div>
                 <div class="prix">
                     <p>Tiramisu à la noisette</p>
-                    <p>55€</p>
+                    <p class="tarif">55€</p>
                 </div>
             </div>
             <footer>
