--- a/note/note.html
+++ b/note/note.html
@@ -23,19 +23,19 @@
             <section id="prelude">
                 <div class="prix">
                     <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                    <p>98€</p>
+                    <p class="tarif">98€</p>
                 </div>
                 <div class="prix">
                     <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                    <p>115€</p>
+                    <p class="tarif">115€</p>
                 </div>
                 <div class="prix">
                     <p>Homard et espuma de potiron mariné au zests d'orange</p>
-                    <p>89€</p>
+                    <p class="tarif">89€</p>
                 </div>
                 <div class="prix">
                     <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
-                    <p>105€</p>
+                    <p class="tarif">105€</p>
                 </div>
             </section>
 
@@ -44,15 +44,15 @@
             <section id="point_dorgue">
                 <div class="prix">
                     <p>Noix de coquille Saint Jacques sur lit de purée de céleri-rave</p>
-                    <p>102€</p>
+                    <p class="tarif">102€</p>
                 </div>
                 <div class="prix">
                     <p>Langoustine poêlée, purée de patate douce</p>
-                    <p>205€</p>
+                    <p class="tarif">205€</p>
                 </div>
                 <div class="prix">
                     <p>Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
-                    <p>169€</p>
+                    <p class="tarif">169€</p>
                 </div>
             </section>
             <h3 class="hr">Mouvement final</h3>
