--- a/palette/palette.html
+++ b/palette/palette.html
@@ -22,45 +22,45 @@
             <section id="entrée">
                 <div class="prix">
                     <p>Fricassée d'escargot au piment d'espelette</p>
-                    <p>60€</p>
+                    <p class="tarif">60€</p>
                 </div>
                 <div class="prix">
                     <p>Oeuf au plat assaisonné à la truffe sur lit de caviar</p>
-                    <p>55€</p>
+                    <p class="tarif">55€</p>
                 </div>
                 <div class="prix">
                     <p>Foie gras de canard mi-cuit et ses copeaux de truffe noires</p>
-                    <p>65€</p>
+                    <p class="tarif">65€</p>
                 </div>
             </section>
             <h3 class="hr">Oeuvre de maître</h3>
             <section id="plats">
                 <div class="prix">
                     <p>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
-                    <p>70€</p>
+                    <p class="tarif">70€</p>
                 </div>
                 <div class="prix">
                     <p>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p>
-                    <p>85€</p>
+                    <p class="tarif">85€</p>
                 </div>
                 <div class="prix">
                     <p>Filet de Turbot aux agrumes</p>
-                    <p>125€</p>
+                    <p class="tarif">125€</p>
                 </div>
             </section>
             <h3 class="hr">Au sommet de l'art</h3>
             <section id="dessert">
                 <div class="prix">
                     <p>Paris-Brest revisité</p>
-                    <p>55€</p>
+                    <p class="tarif">55€</p>
                 </div>
                 <div class="prix">
                     <p>Macaron au chocolat d'expetion et glace à la vanille de Madagascar</p>
-                    <p> 65€</p>
+                    <p class="tarif">65€</p>
                 </div>
                 <div class="prix">
                     <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
-                    <p>60€</p>
+                    <p class="tarif">60€</p>
                 </div>
             </section>
         </div>
