--- a/palette/palette.html
+++ b/palette/palette.html
@@ -4,6 +4,7 @@
 <head>
     <title>La palette du goût</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_palette.css" />
     <link rel="stylesheet" href="../font_awesome/css/all.min.css">
 </head>
