modification du responsive

--- a/chic/chic.html
+++ b/chic/chic.html
@@ -19,7 +19,15 @@
             <h2>Le chic à la française</h2>
         </header>
         <div id="menu">
-            <h3 id="hr_appetit">Pour se mettre en appétit</h3>
+            <div id="appetit">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Pour se mettre en appétit</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="entrée">
                 <div class="prix">
                     <p>Tartare de poulpe acidulé aux zests d'orange</p>
@@ -34,7 +42,15 @@
                     <p class="tarif">57€</p>
                 </div>
             </section>
-            <h3 id="hr_plaisir">Plaisir des papilles</h3>
+            <div id="plaisir">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Plaisir des papilles</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="plats">
                 <div class="prix">
                     <p> Saint Jacques accompagnées d'une purée de panais</p>
@@ -49,8 +65,15 @@
                     <p class="tarif">175€</p>
                 </div>
             </section>
-            <h3 id="hr_gourmandise">Gourmandise sucrées</h3>
-
+            <div id="gourmandise">
+                <div class="left_line">
+                    <hr>
+                </div>
+                <h3>Gourmandise sucrées</h3>
+                <div class="right_line">
+                    <hr>
+                </div>
+            </div>
             <section id="dessert">
                 <p> Pétales de violettes glacés et purée de noisettes</p>
                 <p>Fondant au chocolat revisité</p>
